--- a/DemoProyectoPractica/Views/Home/Index.cshtml
+++ b/DemoProyectoPractica/Views/Home/Index.cshtml
@@ -6,7 +6,6 @@
     
     <div class="col-md-4">
         <h2>Demo 1</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <h1>Jose Figueroa</h1>
     </div>
 </div>
