--- a/DemoProyectoPractica/Views/Home/Index.cshtml
+++ b/DemoProyectoPractica/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
     <div class="col-md-4">
         <h2>Demo 1</h2>
         <h1>Jose Figueroa</h1>
+        <h1>Jose Figueroa</h1>
     </div>
 </div>
